--- a/.github/workflows/jd_fruit.yml
+++ b/.github/workflows/jd_fruit.yml
@@ -6,7 +6,7 @@ name: jd_fruit
 on:
   workflow_dispatch:
   schedule:                 # 时间表
-    - cron:  '30 1,9 * *'    # 每天国际时间 19 点，北京时间 3 点执行(北京+8)
+    - cron:  '30 1,9 * * *'    # 每天国际时间 19 点，北京时间 3 点执行(北京+8)
   watch:
     types: started
 
